fixed gap on safari

--- a/src/generalstyle.css
+++ b/src/generalstyle.css
@@ -11,7 +11,7 @@
     font-size: 2em;
     font-family: 'Kalam';
     margin: 0px;
-    padding: 0px;
+    padding: 0px 30px 0px 30px;
 }
 
 h4 {
