--- a/src/index.css
+++ b/src/index.css
@@ -69,7 +69,6 @@ header {
 
 nav {
   display: flex;
-  gap: 25px;
   padding-right: 40px;
 }
 
@@ -80,6 +79,7 @@ nav {
 .navLink {
   text-decoration: none;
   color: grey;
+  padding-left: 25px;
 }
 
 .navLink:hover {
@@ -121,12 +121,13 @@ nav {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  gap: 20px;
   margin-top: 10px;
+  row-gap: 20px;
 }
 
 .dropdown {
   width: 150px;
+  padding-bottom: 20px;
 }
 
 .aboutBlurb {
@@ -295,7 +296,7 @@ nav {
     margin-left: 0;
   }
   .aboutBlurb {
-    width: 90%;
+    width: 80%;
     text-align: center
   }
   .dropdown {
@@ -303,6 +304,7 @@ nav {
   }
   .menu {
     flex-direction: row;
+    column-gap: 20px;
   }
   .descText {
     font-size: medium;
@@ -327,7 +329,9 @@ nav {
 @media only screen and (max-width: 400px) {
   nav {
     padding-right: 2%;
-    gap: 10px;
+  }
+  .navLink {
+    padding-left: 10px;
   }
 }
 
