--- a/src/redesignstyle.css
+++ b/src/redesignstyle.css
@@ -87,4 +87,7 @@
     .accessList {
         padding-left: 20px;
     }
+    .styleguide {
+        max-height: 200px;
+    }
 }
